test/invalid/baseline/exception.txt
Syntax error at line 4 in exception.webidl:
exception SomeException {
^ Unrecognised tokens
